--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "express-session": "^1.9.3",
     "express-validator": "^2.7.0",
     "gravatar": "^1.1.0",
-    "jade": "*",
+    "pug": "^2.0.0-beta6",
     "js-yaml": "^3.1.0",
     "lodash": "^2.4.1",
     "markdown-toc": "^0.11.7",
