--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "js-yaml": "^3.1.0",
     "lodash": "^4.0.0",
     "markdown-toc": "^0.11.7",
-    "marked": "^0.3.5",
+    "markdown-it": "^8.2.0",
+    "markdown-it-footnote": "^3.0.0",
+    "markdown-it-task-lists": "^1.3.0",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
     "node-syntaxhighlighter": "*",
