--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "markdown-it-footnote": "^3.0.0",
     "markdown-it-task-lists": "^1.3.0",
     "markdown-it-anchor": "^2.6.0",
+    "markdown-it-container": "^2.0.0",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
     "node-syntaxhighlighter": "*",
