--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "passport-http": "^0.3.0",
     "semver": "^2.3.2",
     "serve-favicon": "^2.1.7",
-    "transliteration": "^0.1.1"
+    "transliteration": "^0.1.1",
+    "lru-cache": "^4.0.0"
   },
   "devDependencies": {
     "chai": "*",
